<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/text_view_login_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_username_label"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/edit_text_login_username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_username_label"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_username_label"/>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_register_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_login_username_field"
        android:visibility="gone">
        <TextView
            android:id="@+id/text_view_login_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_email_label"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/edit_text_login_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_activity_email_label"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_email_label"/>
        <TextView
            android:id="@+id/text_view_login_optional_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optional"
            app:layout_constraintTop_toBottomOf="@id/edit_text_login_email_field"/>
        <TextView
            android:id="@+id/text_view_login_first_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_first_name_label"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_optional_label"/>
        <EditText
            android:id="@+id/edit_text_login_first_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_activity_first_name_hint"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_first_name_label"/>
        <TextView
            android:id="@+id/text_view_login_last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_last_name_label"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_optional_label"
            app:layout_constraintStart_toStartOf="@id/edit_text_login_last_name_field" />
        <EditText
            android:id="@+id/edit_text_login_last_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_activity_last_name_hint"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_last_name_label"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/text_view_login_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_password_label"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_register_fields"/>
    <EditText
        android:id="@+id/edit_text_login_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_password_label"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_password_label"/>

    <Button
        android:id="@+id/button_login_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_login_password_field"/>

    <TextView
        android:id="@+id/text_view_login_create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_create_account"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_login_login" />
    <TextView
        android:id="@+id/text_view_login_forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_forgot_password"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_login_create_account_button" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_login_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_forgot_password_button">
        <TextView
            android:id="@+id/text_view_login_response_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/text_view_login_response_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_login_response_status"/>

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>